# MedGemmaImpactChallenge

./: .gitignore  README.md  pyproject.toml
core/: agent.py  config.py  memory.py  planner.py  registry.py
interfaces/: __init__.py  api.py  cli.py  gradio_ui.py
tests/: test_all_tools.py
tests/interfaces/: test_api.py  test_gradio_ui.py
tools/: base.py
tools/clinical/: differential_diagnosis.py  risk_assessment.py  treatment_recommender.py  triage_classifier.py
tools/documents/: clinical_notes_parser.py  discharge_summary_parser.py  insurance_claims_parser.py  lab_report_parser.py  pathology_report_parser.py  prescription_parser.py  radiology_report_parser.py
tools/imaging/: ct_analyzer.py  dermoscopy_analyzer.py  dicom_handler.py  fundus_analyzer.py  histopath_analyzer.py  mri_analyzer.py  ultrasound_analyzer.py  xray_analyzer.py
tools/integration/: fhir_adapter.py  hl7_parser.py  patient_timeline.py
tools/knowledge/: drug_interaction.py  guidelines_rag.py  icd_cpt_lookup.py  medical_calculator.py  pubmed_search.py  terminology_explainer.py
tools/safety/: audit_logger.py  hallucination_detector.py  safety_checker.py  uncertainty_quantifier.py
tools/utilities/: __init__.py  entity_extractor.py  medical_summarizer.py  patient_translator.py  report_generator.py
